# de-zoomcamp-final-project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pipeline.py  pyproject.toml
notebook/: bronze.ipynb  silber_warehouse.ipynb
pipeline/: Dockerfile  pipeline.py  pyproject.toml
streamlit/: Dockerfile  app.py
